dummy swap works with ui

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "compile": "hardhat compile",
     "test:quoters": "hardhat test test/Quoters.test.js",
     "test:redstone": "FORK=1 HARDHAT_CONFIG=hardhat.redstone.v5.config.js npx hardhat test test/peripheral/quoters/real/RealDataBridge/StoixQuoter.fork.test.js --grep StoixQuoter",
-    "test:stoix:dummy": "npx hardhat test test/peripheral/quoters/dummy/dummyDataBridge/StoixBridge.DummyQuoters.test.js test/peripheral/quoters/dummy/dummyDataBridge/StoixBridge.DummyQuoters.display.test.js"
+    "test:stoix:dummy": "npx hardhat test test/peripheral/quoters/dummy/dummyDataBridge/StoixBridge.DummyQuoters.test.js test/peripheral/quoters/dummy/dummyDataBridge/StoixBridge.DummyQuoters.display.test.js",
+    "deploy:local": "MAINNET_RPC=\"\" node scripts/restartAndDeploy.js",
+    "node:start": "MAINNET_RPC=\"\" npx hardhat node",
+    "node:stop": "node scripts/manageHardhatNode.js stop",
+    "node:restart": "node scripts/manageHardhatNode.js restart"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
